--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,14 +7,14 @@ compatibility_date = "2024-09-23"
 [[d1_databases]]
 binding = "DB" # available in your Worker on env.DB
 database_name = "twikoo"
-database_id = "b35e0bd5-6d17-42eb-a597-ff4869a74461"
+database_id = "ab451848-b420-4f14-abe2-521ed29a499b"
 
 [[r2_buckets]]
 binding = "R2"
 bucket_name = "twikoo"
 
 [vars]
-R2_PUBLIC_URL = "https://twikoo.r2.mingy.org"
+R2_PUBLIC_URL = "https://twikoo.r2.chenvlog.com"
 
 [dev]
 port = 5000
